# strongswan

conf/plugins/: dhcp.opt
src/frontends/android/app/: build.gradle
src/frontends/android/app/src/main/java/org/strongswan/android/logic/: VpnStateService.java
src/frontends/android/app/src/main/res/values-de/: strings.xml
src/libcharon/encoding/: message.c
src/libstrongswan/crypto/: qske_mechanism.c  qske_mechanism.h
src/libstrongswan/crypto/proposal/: proposal.c  proposal_keywords_static.txt
src/libstrongswan/plugins/oqs/: Makefile.am  oqs_plugin.c  oqs_qske.c
src/libstrongswan/plugins/qske_newhope/: qske_newhope.c
src/libstrongswan/plugins/qske_newhope/tests/suites/: test_qske_newhope.c
testing/tests/swanctl/rw-qske/: description.txt
testing/tests/swanctl/rw-qske/hosts/carol/etc/: strongswan.conf
testing/tests/swanctl/rw-qske/hosts/carol/etc/swanctl/: swanctl.conf
testing/tests/swanctl/rw-qske/hosts/dave/etc/: strongswan.conf
testing/tests/swanctl/rw-qske/hosts/dave/etc/swanctl/: swanctl.conf
testing/tests/swanctl/rw-qske/hosts/moon/etc/: strongswan.conf
testing/tests/swanctl/rw-qske/hosts/moon/etc/swanctl/: swanctl.conf
